--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -90,7 +90,7 @@
   font-family: monospace;
   font-size: 10pt;
   margin: 1em 0;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .markdown a {
