--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -38,11 +38,7 @@
 }
 
 .markdown table {
-  @apply border-solid border border-black;
-  border-spacing: 4px 2px;
-  box-sizing: border-box;
-  display: table;
-  zoom: 1;
+  @apply border-solid border border-black border-spacing-1 box-border table;
 }
 
 .markdown tbody {
