--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,16 @@
   td {
     border: white 2px solid !important;
   }
+
+  .postTag {
+    color: black;
+    background: white;
+    border-color: black;
+  }
+
+  .postTag:before {
+    background: black;
+  }
 }
 
 article {
@@ -24,4 +34,27 @@ article {
 /* codepen */
 .cp_embed_wrapper {
   margin-bottom: 48px;
+}
+
+/* tag Tailwindでは難しかったので*/
+.postTag {
+  position: relative;
+  display: inline-block;
+  padding: 0.5rem 1rem 0.5rem 3rem;
+  color: white;
+  border-radius: 100vh 0 0 100vh;
+  background: black;
+  border-color: white;
+  margin-right: 1rem;
+}
+
+.postTag:before {
+  position: absolute;
+  top: calc(50% - 7px);
+  left: 10px;
+  width: 14px;
+  height: 14px;
+  content: "";
+  border-radius: 50%;
+  background: #fff;
 }
