--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,8 +27,14 @@
   }
 }
 
+@media (width >= 64rem) {
+  article {
+    width: 80% !important;
+  }
+}
+
 article {
-  width: 80%;
+  width: 100%;
 }
 
 /* codepen */
